search responsiveness fixed
changed the search component to be more responsive.

--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -29,9 +29,9 @@
                 [(value)]="showHowMany"
                 (selectionChange)="getCases()"
               >
-                <mat-option value="1">1</mat-option>
                 <mat-option value="5">5</mat-option>
                 <mat-option value="10">10</mat-option>
+                <mat-option value="15">15</mat-option>
               </mat-select>
             </mat-form-field>
             <div class="d-flex align-items-center">entries</div>
@@ -93,4 +93,5 @@
       </div>
     </mat-card>
   </div>
+  <div class="pb-2"></div>
 </div>
