--- a/Pet-Pickup/src/app/header/search/search.component.css
+++ b/Pet-Pickup/src/app/header/search/search.component.css
@@ -27,6 +27,7 @@ li:hover {
 
 input {
   font-size: 14px;
+  min-width: 190px;
 }
 
 .form-control.input {
@@ -41,12 +42,34 @@ input {
 }
 
 .color-change {
-color: white;
+  color: white;
+}
+
+#ddbutton {
+  width: 200px;
 }
 
 @media screen and (max-width: 767px) {
   /* CSS Code for when the screen size is 480px Screen size */
   .color-change {
     color: black
-    }
+  }
+
+  #ddbutton {
+    width: 180px;
+  }
+
+  input {
+    font-size: 14px;
+    max-width: 120px;
+  }
+
+  .searchIcon {
+    font-size: 25px;
+  }
+
+  span {
+    font-size: 90%;
+  }
+
 }
